--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,9 +14,9 @@ androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core
 androidx-activity = { group = "androidx.activity", name = "activity-compose", version.ref = "activity" }
 lifecycle-runtine = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
-compose-ui = { group = "anndroidx.compose.ui", name = "ui" }
-compose-ui-graphics = { group = "anndroidx.compose.ui", name = "ui-graphics" }
-compose-ui-tooling-preview = { group = "anndroidx.compose.ui", name = "ui-tooling-preview" }
+compose-ui = { group = "androidx.compose.ui", name = "ui" }
+compose-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
+compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "android-junit" }
