--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ application-version = "8.1.2"
 kotlin-android-version = "1.8.10"
 google-services-version = "4.4.0"
 firebase-version = "32.5.0"
+gson-version = "2.10.1"
+coil-version = "2.5.0"
 
 [libraries]
 androidx-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -29,6 +31,10 @@ ui-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebase-version" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
 firebase-database = { group = "com.google.firebase", name = "firebase-database" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage" }
+gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson-version" }
+coil = { group = "io.coil-kt",name="coil-compose",version.ref ="coil-version" }
+
 
 [plugins]
 appliation = { id = "com.android.application", version.ref = "application-version" }
